# Auction-House

./: .gitignore  README.md
flask-server/: .env  README.md  analytics.html  auction_house.db  pyproject.toml  requirements.txt  test_login_analytics.py
flask-server/app/: __init__.py  auto_backup.py  data_mappers.py  database.py  entities.py  main.py  services.py  utils.py
flask-server/app/config/: __init__.py  base.py  development.py  production.py
flask-server/app/data_mappers/: __init__.py  auth_mapper.py  bid_mapper.py  categories.py  category_mapper.py  category_mappers.py  chat_mapper.py  chat_message_mapper.py  chat_message_mappers.py  delivery_mapper.py  delivery_mappers.py  list_mapper.py  listing_mapper.py  listing_mappers.py  listings.py  model_mapper.py  order_mapper.py  profile_mapper.py  review_mapper.py  session_mapper.py  support_ticket_mapper.py  support_ticket_mappers.py  support_ticket_staff_mapper.py  ticket_message_mapper.py  transaction_mapper.py  transactions_mapper.py  user_login_mapper.py  user_login_mappers.py  user_mapper.py  user_profile_mapper.py
flask-server/app/database/: __init__.py  backup.py  connection.py
flask-server/app/entities/: __init__.py  bid.py  category.py  chat.py  chat_message.py  chat_messages.py  chats.py  delivery.py  list.py  list_item.py  listing.py  listings.py  model.py  order.py  order_item.py  profile.py  review.py  session.py  staff_user.py  staff_users.py  support_ticket.py  support_tickets.py  ticket_message.py  transaction.py  transactions.py  user.py  user_profile.py
flask-server/app/models/: event_log.py
flask-server/app/routes/: __init__.py  analytics_routes.py  auth_routes.py  bid_routes.py  categories.py  category.py  category_routes.py  chat_message_routes.py  chat_routes.py  delivery_routes.py  history_routes.py  list_routes.py  listing_routes.py  listings.py  log_routes.py  logger_routes.py  model_routes.py  profile_routes.py  purchase_routes.py  review_routes.py  support_ticket_routes.py  ticket_message_routes.py  user_login_routes.py  user_profile_routes.py  user_routes.py
flask-server/database/: auctionhouse.db
flask-server/tests/: test_login.py
react-frontend/: .env  (+6 more)
(+319 files in other folders)
